# Hikari

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  conanfile.txt  vcpkg.json
Core/Common/: CMakeLists.txt
Core/Common/Interface/: HKArrayUtils.h  HKBytesUtils.h  HKInterface.h  HKJSON.h  HKMacro.h  HKStringUtils.h  HKUUID.h  pch.h
Lib/Base/: CMakeLists.txt
Lib/Base/Include/Hikari/: Math.h  Preprocessor.h  Preprocessors.h  SpinLock.h  ThreadPool.h  TypeTraits.h
Lib/Base/Include/Hikari/Math/: MacroUtilsDef.h  Mat.h  (+4 more)
Test/Test0/: CMakeLists.txt
Test/Test0/Include/: Test0.h
Test/Test0/Src/: Test0.cpp
lib/hikari/core/app/: CMakeLists.txt
lib/hikari/core/common/: CMakeLists.txt
src/hikari/: CMakeLists.txt  array.h  bsdf.h  camera.h  color.h  data_type.h  light.h  object.cpp  object.h  object_array.cpp  object_array.h  platform.h  ref_cnt_object.cpp  ref_cnt_object.h  ref_ptr.h  shape.cpp  shape.h  transform_graph.cpp  transform_graph.h  uuid.h  value_array.cpp  value_array.h
src/hikari-test/test0/: CMakeLists.txt  test0.cpp  test0.h  test0_c11.c  test0_cxx11.cpp  test0_cxx17.cpp
src/hikari-test/test1/: CMakeLists.txt  test1.h  test1_c11.c  test1_config.h.in  test1_cxx11.cpp  test1_cxx17.cpp
src/hikari/assets/: CMakeLists.txt
src/hikari/assets/image/: CMakeLists.txt
src/hikari/assets/mitsuba/: CMakeLists.txt  memo.txt
src/hikari/bsdf/: CMakeLists.txt
src/hikari/bsdf/src/: bump.cpp  bump_map.cpp  conductor.cpp  dielectric.cpp  diffuse.cpp  mask.cpp  normal_map.cpp  null.cpp  phong.cpp  plastic.cpp  rough_conductor.cpp  rough_dielectric.cpp  rough_plastic.cpp  thin_dielectric.cpp  two_sided.cpp
src/hikari/camera/: CMakeLists.txt  perspective.cpp  perspective.h
src/hikari/camera/src/: orthographic.cpp  perspective.cpp  test.cpp
src/hikari/core/: CMakeLists.txt
src/hikari/core/src/: bitmap.cpp  bsdf.cpp  camera.cpp  light.cpp  material.cpp  medium.cpp  mipmap.cpp  node.cpp  object.cpp  plugin.cpp  ref_cnt_object.cpp  scene.cpp  shape.cpp  subsurface.cpp  surface.cpp  test.cpp  value_array.cpp  variant.cpp
src/hikari/film/: CMakeLists.txt
src/hikari/film/src/: hdr.cpp  spec.cpp
src/hikari/graphics/: CMakeLists.txt
src/hikari/graphics/common/: CMakeLists.txt
src/hikari/graphics/opengl/: CMakeLists.txt
src/hikari/graphics/vulkan/: CMakeLists.txt
src/hikari/interface/hikari/: array.h  data_type.h  dynamic_loader.h  object.h  object_array.h  object_array_utils.h  object_utils.h  platform.h  plugin.h  ref_ptr.h  shape.h  stl_utils.h  uuid.h  value_array.h  value_array_utils.h
src/hikari/light/: CMakeLists.txt
src/hikari/light/src/: area.cpp  constant.cpp  directional.cpp  envmap.cpp  test.cpp
src/hikari/math/: CMakeLists.txt  aabb.h  affine_3d.h  common.cpp  common.h  matrix.h  quat.h  vec.h
src/hikari/math/src/: common.cpp
src/hikari/scene/: material.h  node.h
src/hikari/shape/: CMakeLists.txt  mesh.cpp  mesh.h  sphere.cpp  sphere.h
src/hikari/shape/src/: cube.cpp  mesh.cpp  plugin.cpp  rectangle.cpp  sphere.cpp  test.cpp  triangle.cpp
src/hikari/spectrum/: CMakeLists.txt
src/hikari/spectrum/src/: srgb.cpp  uniform.cpp
src/hikari/src/hikari/: object_array.cpp  plugin.cpp  transform_graph.cpp
src/hikari/test/: CMakeLists.txt
src/hikari/test/test0/: CMakeLists.txt  test0.cpp
src/hikari/texture/: CMakeLists.txt
src/hikari/texture/src/: bitmap.cpp  checkerboard.cpp  mipmap.cpp  test.cpp
test/owl/test0/: CMakeLists.txt  deviceCode.cu  hostCode.cpp
test/owl/test1/: CMakeLists.txt  deviceCode.cu  deviceCode.h  hostCode.cpp  hostCode.h  kernelCode.cu  thrustCode.cu
test/owl/test1/archeive/: kernelCode.h  thrustCode.h
test/owl/test2/: CMakeLists.txt  deviceCode.cu  deviceCode.h  hostCode.cpp  hostCode.h
test/owl/test3/: CMakeLists.txt  deviceCode.cu  deviceCode.h  hostCode.cpp  hostCode.h
test/owl/testlib/: CMakeLists.txt  common.h  gl_viewer.cpp  gl_viewer.h  gl_viewer_2.cpp  gl_viewer_2.h  obj_model.cpp  obj_model.h  pinhole_camera.h  testlib_config.h.in  tonemap.cpp  tonemap.h
test/owl/testlib/cuda/: tonemap_impl.cu  tonemap_impl.h
test/test0/: CMakeLists.txt  main.cpp
test/test0/hikari/core/: data_type.h  json.h  object.cpp  object.h  transform.h
test/test1/: CMakeLists.txt  main.cpp  test1.slang  test1_config.h.in
test/test2/: CMakeLists.txt  main.cpp  test2.slang
test/test3/: CMakeLists.txt  main.cpp
test/test3/hikari/core/: color.cpp  color.h  data_type.cpp  data_type.h  field.cpp  field.h  json.cpp  json.h  node.cpp  node.h  object.cpp  object.h  spectrum.h  transform.cpp  transform.h  tuple.h
test/test4/: CMakeLists.txt  main.cpp
test/test4/hikari/core/: bbox.h  blob.cpp  blob.h  camera.h  color.cpp  data_type.h  deserializer.h  field.cpp  field.h  light.h  material.h  node.cpp  node.h  object.h  property.h  resource.h  serializer.h  shape.cpp  shape.h  spectrum.cpp  spectrum.h  transform.h  tuple.h  utils.h
test/test4/hikari/plotting/: ReadMe.md
test/test4/hikari/render/: buffer.h  gfx_device.h  gfx_window.cpp  gfx_window.h  image.h  sampler.h  shader.h  texture.h
test/test4/hikari/shape/: cube.cpp  cube.h  mesh.cpp  mesh.h  rect.cpp  rect.h  sphere.cpp  sphere.h
test/test4/hikari/spectrum/: blackbody.cpp  blackbody.h  color.cpp  color.h  irregular.cpp  irregular.h  regular.cpp  regular.h  uniform.cpp  uniform.h
test/test5/: CMakeLists.txt  main.cpp  新しいファイル
test/test6/: CMakeLists.txt  main.cpp
test/test6/hikari/console/: application.h  log_system.cpp  log_system.h
test/test6/hikari/core/: application.h  conversion.h  data_types.h  flags.h  platform.h  singleton.h
test/test6/hikari/devices/: common.h  system.cpp  system.h  window.cpp  window.h
test/test6/hikari/events/: application_event.h  event.h  handler.h  queue.h  system.cpp  system.h  target.cpp  target.h  window_event.h
test/test6/hikari/graphics/: common.h  instance.h  system.cpp  system.h
test/test6/hikari/thread/: spin_lock.cpp  spin_lock.h
test/test6/hikari/ui/: system.cpp  system.h
test/test6/hikari/window/: application.cpp  application.h  common.h  system.cpp  system.h  window.h
(+335 files in other folders)
