cmake_minimum_required(VERSION 3.19)
project(hikari)
enable_language(CUDA)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
# if (MSVC)
#     set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} /wd4819")
# endif()
set(HK_BUILD_ROOT ${CMAKE_CURRENT_BINARY_DIR})
add_subdirectory(src)
add_subdirectory(ext)
add_subdirectory(test)